--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,5 +8,8 @@
 // background colors
 $principalColor: rgb(242, 242, 242);
 $secondaryColor: rgb(1, 31, 38);
+$cardColor: rgb(230, 230, 235);
 $hoverColor: rgb(3, 127, 140);
 $buttonColor: rgb(2, 94, 115);
+$alertColor: rgb(242, 97, 1);
+$alertColor2: rgb(255, 0, 0)
