--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -1,15 +1,7 @@
-h1{
+h1,h2,h3{
     @extend %h;
-    font-size: 2rem;
 }
-h2{
-    @extend %h;
-    font-size: 1.5rem;
-}
-h3{
-    @extend %h;
-    font-size: 1rem;
-}
+
 #body-a{
     display: grid;
     grid-template-columns: 1fr;
@@ -34,7 +26,7 @@ h3{
 }
 
 // media querie desktop
-@media only screen and (min-device-width:1024px) {
+@media only screen and (min-device-width:992px) {
     #body-b{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
