--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -1,6 +1,6 @@
 // error 404
 .body__error{
-    background-image: url(/img/error_404.png);
+    background-image: url(/img/error_404.webp);
     .form__error{
         width: 100%;
         height: 100%;
